--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -79,6 +79,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "SmackinTheKraken",
+            "link": "",
+            "percent": 100,
+            "hz": 240
         }
     ]
 }
