--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -231,6 +231,12 @@
             "hz": "- "
         },
         {
+            "user": "KronosGD",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
             "user": "Anomaly",
             "link": "",
             "percent": 100,
