--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -157,6 +157,12 @@
             "link": "https://youtu.be/GoU6t1S0V5w?si=LAVTNtGx_DzvwaL3",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "zzoink15",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
