--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -337,6 +337,12 @@
             "link": "https://youtu.be/55ueqpm4hPY?si=0JHNderhrmV1D58a",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "zzoink15",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
