--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -163,6 +163,12 @@
             "link": "https://youtu.be/V-k9IPm5JUw?si=hlqzDryiQOftBDeK",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "zzoink15",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
