--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -163,6 +163,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "gonkergd",
+            "link": "",
+            "percent": 100,
+            "hz": 144
         }
     ]
 }
