--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -205,6 +205,18 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "nukakulah",
+            "link": "",
+            "percent": 100,
+            "hz": 60
+        },
+        {
+            "user": "tomm",
+            "link": "",
+            "percent": 100,
+            "hz": 240
         }
     ]
 }
