--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -391,6 +391,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Music addict",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
