--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -229,6 +229,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "ThayLoser",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
