--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -153,7 +153,7 @@
             "hz": "- "
         },
         {
-            "user": "secret444",
+            "user": "QuadSecret",
             "link": "",
             "percent": 100,
             "hz": "- "
