--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -397,6 +397,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "FireBird",
+            "link": "",
+            "percent": 100,
+            "hz": 360
         }
     ]
 }
