--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -375,7 +375,7 @@
             "hz": "- "
         },
         {
-            "user": "Pgclubsteplover911",
+            "user": "Yefan",
             "link": "",
             "percent": 100,
             "hz": "- "
