--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -51,6 +51,12 @@
             "hz": 60
         },
         {
+            "user": "Jenny",
+            "link": "",
+            "percent": 100,
+            "hz": 60
+        },
+        {
             "user": "SmileBullet",
             "link": "",
             "percent": 100,
