--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -229,6 +229,12 @@
             "link": "",
             "percent": 100,
             "hz": 240
+        },
+        {
+            "user": "dashy6283",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
