--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -247,6 +247,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "bonezizdum",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
