--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -271,6 +271,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "krii",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
