--- a/data/LYNX.json
+++ b/data/LYNX.json
@@ -127,6 +127,18 @@
             "link": "",
             "percent": 100,
             "hz": 120
+        },
+        {
+            "user": "krii",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "xyne",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
