--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -265,6 +265,12 @@
             "link": "",
             "percent": 100,
             "hz": 120
+        },
+        {
+            "user": "Sir_Manface",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
