--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -517,6 +517,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Bladey",
+            "link": "",
+            "percent": 100,
+            "hz": 60
         }
     ]
 }
