--- a/data/LYNX.json
+++ b/data/LYNX.json
@@ -145,6 +145,18 @@
             "link": "",
             "percent": 100,
             "hz": 144
+        },
+        {
+            "user": "Chahnkeh",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Beeshie",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
