--- a/data/LYNX.json
+++ b/data/LYNX.json
@@ -157,6 +157,18 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Music addict",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "grasshopper",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
