--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -277,6 +277,18 @@
             "link": "",
             "percent": 100,
             "hz": 60
+        },
+        {
+            "user": "xyne",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "grasshopper",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
