--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -523,6 +523,12 @@
             "link": "",
             "percent": 100,
             "hz": 60
+        },
+        {
+            "user": "MjNinja",
+            "link": "",
+            "percent": 100,
+            "hz": 60    
         }
     ]
 }
