--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -529,6 +529,12 @@
             "link": "",
             "percent": 100,
             "hz": 60    
+        },
+        {
+            "user": "MoulesFrites",
+            "link": "",
+            "percent": 100,
+            "hz": "- "    
         }
     ]
 }
