--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -289,6 +289,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Musix",
+            "link": "",
+            "percent": 100,
+            "hz": "- "    
         }
     ]
 }
