--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -289,6 +289,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Jarzst",
+            "link": "",
+            "percent": 100,
+            "hz": "-"    
         }
     ]
 }
