--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -165,7 +165,7 @@
             "hz": "- "
         },
         {
-            "user": "gonkergd",
+            "user": "gonker",
             "link": "",
             "percent": 100,
             "hz": 144
