--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -300,7 +300,13 @@
             "user": "wassas1",
             "link": "",
             "percent": 100,
-            "hz": "-"    
+            "hz": "-"
+        },
+        {
+            "user": "AerialShard",
+            "link": "",
+            "percent": 100,
+            "hz": "- "    
         }
     ]
 }
