--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -306,6 +306,12 @@
             "user": "AerialShard",
             "link": "",
             "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Music addict",
+            "link": "",
+            "percent": 100,
             "hz": "- "    
         }
     ]
