--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -541,6 +541,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "    
+        },
+        {
+            "user": "Cyber",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
