--- a/data/LYNX.json
+++ b/data/LYNX.json
@@ -1,9 +1,9 @@
 {
     "id": 110480253,
     "name": "LYNX",
-    "author": "chloechu",
-    "creators": ["chloechu","flovvii"],
-    "verifier": "chloechu",
+    "author": "Chloe",
+    "creators": ["Chloe","flovvii"],
+    "verifier": "Chloe",
     "verification": "https://youtu.be/eGVUlK3sycE",
     "percentToQualify": "100",
     "password": "Free to Copy",
