--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -583,6 +583,24 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Beeshie",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Cricketeer",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "CherrySoda",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
