--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -325,6 +325,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Yefan",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
