--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -619,6 +619,36 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "AceK58",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Neutralise",
+            "link": "",
+            "percent": 100,
+            "hz": "-"
+        },
+        {
+            "user": "Wide Shady",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Maverix",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Écarlate",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
