--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -649,6 +649,24 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "AgentDarius",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Snowballsuii",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Syunni",
+            "link": "https://www.youtube.com/watch?v=tsKm_aBxAwA",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
