--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -633,7 +633,7 @@
             "hz": "-"
         },
         {
-            "user": "Wide Shady",
+            "user": "Shady",
             "link": "",
             "percent": 100,
             "hz": "- "
