--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -537,7 +537,7 @@
             "hz": "- "
         },
         {
-            "user": "gamer2011",
+            "user": "Gamer711",
             "link": "",
             "percent": 100,
             "hz": "- "    
