--- a/data/LYNX.json
+++ b/data/LYNX.json
@@ -199,6 +199,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "shiver",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
