--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -667,6 +667,12 @@
             "link": "https://www.youtube.com/watch?v=tsKm_aBxAwA",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Mazrio",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
