--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -673,6 +673,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "BlissBee",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
