--- a/data/LYNX.json
+++ b/data/LYNX.json
@@ -2,7 +2,7 @@
     "id": 110480253,
     "name": "LYNX",
     "author": "Chloe",
-    "creators": ["Chloe","flovvii"],
+    "creators": ["Chloe","meowLuna"],
     "verifier": "Chloe",
     "verification": "https://youtu.be/eGVUlK3sycE",
     "percentToQualify": "100",
