--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -745,6 +745,12 @@
             "link": "https://www.youtube.com/watch?v=ilhB79VgyH0",
             "percent": 100,
             "hz": 60
+        },
+        {
+            "user": "Chomiczekk",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
