--- a/data/Swirly_Easter.json
+++ b/data/Swirly_Easter.json
@@ -337,6 +337,12 @@
             "link": "",
             "percent": 100,
             "hz": 240
+        },
+        {
+            "user": "Aurélien",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
