my teacher told me commit messages should be descriptive so I'm gonna say sex penis instead

--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -751,6 +751,24 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "zonk",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "Locker15",
+            "link": "",
+            "percent": 100,
+            "hz": "-"
+        },
+        {
+            "user": "Sunsetto",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
