--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -343,6 +343,18 @@
             "link": "",
             "percent": 100,
             "hz": 240
+        },
+        {
+            "user": "LifelessComputer",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "shiver",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
