--- a/data/Reconfigurate.json
+++ b/data/Reconfigurate.json
@@ -355,6 +355,12 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Neptune",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
