--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -775,6 +775,30 @@
             "link": "",
             "percent": 100,
             "hz": "-"
+        },
+        {
+            "user": "TJB",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "MFboy",
+            "link": "https://youtu.be/fskHSd-vkK4?t=684",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "vivian",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
+        },
+        {
+            "user": "ToxicAgent",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
