--- a/data/Crunchy_Apple.json
+++ b/data/Crunchy_Apple.json
@@ -817,6 +817,18 @@
             "link": "",
             "percent": 100,
             "hz": "- "
+        },
+        {
+            "user": "Heater123",
+            "link": "",
+            "percent": 100,
+            "hz": 120
+        },
+        {
+            "user": "Sprankton",
+            "link": "",
+            "percent": 100,
+            "hz": "- "
         }
     ]
 }
